# huobi-rs

./: Cargo.toml  README.md
src/: client.rs  error.rs  models.rs  websocket.rs
src/client/: account.rs  market.rs
