[package]
name = "huobi_rs"
version = "0.1.0"
authors = ["QiaoXiaofeng<andyjoe318@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
time = "*"
ring = "*"
hex = "*"
base64 = "*"
crypto = { version = "*", package = "rust-crypto" }
data-encoding = "*"
chrono = "*"
percent-encoding = "*"
log = "*"
simple_logger = "*"
tungstenite = "*"
url = "*"
flate2 = "*"
lazy_static = "*"
rand = "*"

[lib]
name = "huobi_rs"
